--- a/blog-frontend/src/index.css
+++ b/blog-frontend/src/index.css
@@ -1,3 +1,7 @@
+:root {
+  --white: #f1f1f1;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
