--- a/blog-frontend/src/App.css
+++ b/blog-frontend/src/App.css
@@ -1,3 +1,7 @@
 .App {
-  text-align: center;
+    text-align: center;
+	min-height: 100vh;
+    background-color: #f1f1f1;
+	background-image: url('/public/svg/ffflurry.svg');
+	background-size: cover;
 }
