--- a/blog-frontend/src/components/posts/Post.css
+++ b/blog-frontend/src/components/posts/Post.css
@@ -1,3 +1,23 @@
+#posts-container {
+    width: 95%;
+    margin: 0 auto;
+    margin-top: 10px;
+}
+
+.post-card .card-subtitle {
+    text-align: right;
+}
+
+.post-card p {
+    text-align: left;
+}
+
+.post-card .btn {
+    width: 200px;
+    margin: 0 auto;
+    margin-bottom: 5px;
+}
+
 .post-form {
     height: 80vh;
     display: flex;
@@ -16,44 +36,9 @@
     align-items: center;
 }
 
-.post-form button {
+.post-form .btn {
     width: 20%;
     margin: 12px auto;
-}
-
-#posts-container {
-    width: 95%;
-    margin: 0 auto;
-    margin-top: 10px;
-}
-
-#posts-container ul {
-    list-style-type: none;
-}
-
-#posts-container > button {
-    margin: 10px;
-}
-
-.post-list {
-    display: inline-flex;
-}
-
-.post-list li {
-    width: 30%;
-    min-width: 350px;
-    min-height: 100px;
-    margin: 1%;
-    overflow-y: hidden;
-}
-
-.post-list button:hover {
-    filter: brightness(85%);
-}
-
-.no-posts-info {
-    padding: 10px;
-    margin-top: 5%;
 }
 
 .post-details-container {
