--- a/blog-frontend/src/components/posts/Post.css
+++ b/blog-frontend/src/components/posts/Post.css
@@ -18,6 +18,12 @@
     margin-bottom: 5px;
 }
 
+.post-card:hover {
+    cursor: pointer;
+    filter: brightness(90%);
+    transition-duration: 0.5s;
+}
+
 .post-form {
     height: 80vh;
     display: flex;
@@ -50,4 +56,19 @@
 
 .user-profile-link:hover {
     cursor: pointer;
+}
+
+.loading-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    height: 50vh;
+    align-items: center;
+}
+
+.add-post-btn {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
 }
